vlib/v/checker/tests/import_symbol_fn_private_err.out
vlib/v/checker/tests/import_symbol_fn_private_err.vv:1:20: error: module `time` function `since()` is private
    1 | import time { now, since }
      |                    ~~~~~
    2 | fn main() {
    3 |   since(now())
vlib/v/checker/tests/import_symbol_fn_private_err.vv:3:3: error: function `time.since` is private. curmod=main fmod=time
    1 | import time { now, since }
    2 | fn main() {
    3 |   since(now())
      |   ~~~~~~~~~~~~
    4 | }
