vlib/v/checker/tests/import_symbol_fn_private_err.vv
import time { now, since }
fn main() {
  since(now())
}
